WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45345
NULL deref when use target is reset, then set to display:none
https://bugs.webkit.org/show_bug.cgi?id=45345
Summary
NULL deref when use target is reset, then set to display:none
Justin Schuh
Reported
2010-09-07 17:35:16 PDT
This can be triggered when you lose the SVG space invaders game in the linked URL. It's a clean NULL deref, and I'll have a patch shortly.
Attachments
Patch
(3.35 KB, patch)
2010-09-07 17:47 PDT
,
Justin Schuh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Schuh
Comment 1
2010-09-07 17:47:54 PDT
Created
attachment 66807
[details]
Patch
Nikolas Zimmermann
Comment 2
2010-09-07 23:55:37 PDT
Comment on
attachment 66807
[details]
Patch Good catch, r=me.
WebKit Commit Bot
Comment 3
2010-09-08 05:09:21 PDT
Comment on
attachment 66807
[details]
Patch Clearing flags on attachment: 66807 Committed
r66973
: <
http://trac.webkit.org/changeset/66973
>
WebKit Commit Bot
Comment 4
2010-09-08 05:09:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug