2010-09-08  Justin Schuh  <jschuh@chromium.org>

Reviewed by Nikolas Zimmermann.

        NULL deref when use target is reset, then set to display:none
        https://bugs.webkit.org/show_bug.cgi?id=45345

        * svg/custom/use-display-none-expected.txt: Added.
        * svg/custom/use-display-none.svg: Added.
2010-09-08  Justin Schuh  <jschuh@chromium.org>

        Reviewed by Nikolas Zimmermann.

        NULL deref when use target is reset, then set to display:none
        https://bugs.webkit.org/show_bug.cgi?id=45345

        Move the NULL check on shadowRoot earlier in SVGUseElement::recalcStyle

        Test: svg/custom/use-display-none.svg

        * svg/SVGUseElement.cpp:
        (WebCore::SVGUseElement::recalcStyle):

Canonical link: https://commits.webkit.org/57726@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@66973 268f45cc-cd09-0410-ab3c-d52691b4dbfc